# expression-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt  exp_config.h  exp_solver.cpp  exp_solver.h  value.cpp  value.h
tests/: CMakeLists.txt  main.cpp  simple_test.cpp  unit_tests.cpp
